tests/fixtures/positive/style/ForbiddenAnnotation.kt
package style

@SuppressWarnings("unchecked")
class MyClass {
    fun doSomething() = Unit
}
