tests/fixtures/negative/style/ForbiddenAnnotation.kt
package style

@Suppress("UNCHECKED_CAST")
class MyClass {
    fun doSomething() = Unit
}
